# cs194-280

./: .gitignore  CalendarTest.py  README.md  gram_test.py  pyproject.toml  requirements.txt  test.ipynb
data/: calendar.json
mindmates/: README.md  pyproject.toml  requirements.txt
mindmates/knowledge/: calendar.txt
mindmates/src/: gram_test.py  main.py
mindmates/src/mindmates/: crew.py  main.py
mindmates/src/mindmates/config/: agents.yaml  tasks.yaml
src/: gram_test.py  main.py
src/memory_pool/: calendar.json
src/mindmates/: crew.py
src/mindmates/config/: agents.yaml  tasks.yaml
src/mindmates/utils/: embedding_utils.py  llm_utils.py  models.py  workflow_utils.py
